--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -6,58 +6,37 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
+        android:padding="40dp"
         android:layout_weight="1" >
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical" >
-        </LinearLayout>
+
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="2"
+            android:gravity="center_vertical|center_horizontal"
             android:orientation="vertical" >
 
-            <ImageView
-                android:id="@+id/imgPortrait"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal"
-                android:layout_weight="1"
-                android:src="@drawable/ic_launcher" />
+                <ImageView
+                    android:id="@+id/imgPortrait"
+                    android:layout_width="200dp"
+        			android:layout_height="200dp"
+                    android:background="@drawable/pic_frame"
+                    android:src="@drawable/ic_launcher" />
+
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical" >
-        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
+        android:paddingTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:orientation="horizontal" >
-<LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:orientation="vertical" >
-        </LinearLayout>
-        <Button
-            android:id="@+id/btnPortrait"
-            style="@style/CountButton"
-            android:background="@drawable/btn_blue"
-            android:textSize="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Aldatu irudia" />
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -65,6 +44,21 @@
             android:orientation="vertical" >
         </LinearLayout>
 
+        <Button
+            android:id="@+id/btnPortrait"
+            style="@style/CountButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/btn_blue"
+            android:text="Aldatu irudia"
+            android:textSize="20dp" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical" >
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
