--- a/res/layout/sagardoegun_row.xml
+++ b/res/layout/sagardoegun_row.xml
@@ -25,7 +25,23 @@
         android:layout_weight="0"
         android:gravity="center_vertical|center_horizontal"
         android:orientation="vertical" >
+		
+		<LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right|center_vertical"
+            android:orientation="horizontal" >
 
+            <TextView
+                android:id="@+id/txSagardoEgunDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:gravity="right"
+                android:text="11/11/11"
+                android:textAppearance="?android:attr/textAppearanceSmall" />
+
+        </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -56,11 +72,11 @@
                     android:text="10.0"
                     android:textAppearance="?android:attr/textAppearanceLarge" />
 
-                <net.sareweb.android.txotx.custom.FollowUnfollowButton_
+               <net.sareweb.android.txotx.custom.FollowUnfollowButton_
                     android:id="@+id/btnFollowUnfollow"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical|center_horizontal" />
+                    android:gravity="center_vertical|center_horizontal" /> 
             </LinearLayout>
         </LinearLayout>
 
