--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -71,7 +71,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@drawable/btn_blue"
-            android:text="Aldatu irudia"
+            android:text="Aldaketak gorde"
             android:textSize="20dp" />
 
         <LinearLayout
