--- a/res/layout/sagardoegun_detail_fragment.xml
+++ b/res/layout/sagardoegun_detail_fragment.xml
@@ -53,23 +53,15 @@
                 android:layout_alignParentTop="true"
                 android:padding="10dp"
                 android:src="@drawable/camera"
-                android:visibility="visible" />
+                android:visibility="visible" /><LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:gravity="center_vertical|center_horizontal" android:orientation="horizontal">
+
+            <ImageView android:id="@+id/imgWeb" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/web" />
+
+            <com.google.android.gms.plus.PlusOneButton xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus" android:id="@+id/plus_one_button_sagardo_egun" android:layout_width="wrap_content" android:layout_height="wrap_content" plus:annotation="inline" plus:size="tall" />
+        </LinearLayout>
         </RelativeLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical|center_horizontal"
-            android:orientation="horizontal" >
-
-            <com.google.android.gms.plus.PlusOneButton
-                xmlns:plus="http://schemas.android.com/apk/lib/com.google.android.gms.plus"
-                android:id="@+id/plus_one_button_sagardo_egun"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                plus:annotation="inline"
-                plus:size="tall" />
-        </LinearLayout>
+        
 
         <LinearLayout
             android:layout_width="wrap_content"
